add magnific-popup and bugfix around spritesmith and jsTask

--- a/src/scss/core/_config.scss
+++ b/src/scss/core/_config.scss
@@ -34,7 +34,7 @@ $filePath: "http://example.com/dist/img";
 // Open Sans & Yu Gothic or Meirio
 // add this code to your website:
 // <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
-$fontFamily: 'Open Sans', "游ゴシック体", "Yu Gothic,", YuGothic "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック","MS PGothic",Arial,Sans-Serif;
+$fontFamily: "Helvetica Neue", "Helvetica", "游ゴシック体", "Yu Gothic,", YuGothic "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック","MS PGothic",Arial,Sans-Serif;
 // Latin Font
 $fontFamilyEn: 'Open Sans',Sans-Serif;
 // code
