--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -15,8 +15,19 @@ block body
     include inc/layout/_layout-header
       h1 Hello World!
     #main.l-main
-      p.red-star
-      p.blue-star
-      p.yellow-star
+      section
+        h2 example of sprite images
+        p.red-star
+        p.blue-star
+        p.yellow-star
+        h2 magnific popup
+        p here is demo.
+        .modal
+          a.modal__btn(href='#modal') demo 
+          #modal.mfp-hide
+            section.modal__content
+              h2 demo
+              p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris elementum turpis risus, quis commodo eros tincidunt at. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sapien nisi, placerat ut egestas vel, vestibulum nec eros. Sed nec venenatis lorem. Donec nulla lacus, molestie vehicula aliquet in, vulputate quis leo. Nullam ut libero vitae magna sollicitudin ornare. Suspendisse non elit congue, aliquam dui at, iaculis mi. Nullam mi dui, dictum a consequat sit amet, ornare ac nibh. Curabitur dui nisl, placerat vitae lobortis vitae, bibendum dapibus eros.
+              a.modal__btn--dismiss(href='#') dismiss
     include inc/layout/_layout-footer
 block append scriptFooter
