modify action highlight.js

--- a/src/scss/core/_config.scss
+++ b/src/scss/core/_config.scss
@@ -38,13 +38,13 @@ $fontFamily: "Helvetica Neue", "Helvetica", "游ゴシック体", "Yu Gothic,", 
 // Latin Font
 $fontFamilyEn: 'Open Sans',Sans-Serif;
 // code
-$fontFamilyCode: Consolas,Courier,sans-serif;
+$fontFamilyCode: Menlo,Consolas,Courier,sans-serif;
 
 //***********************
 // block size
 //***********************
 // $containerWidth: ;
-$maxWidth: 960px;
+$maxWidth: 100%;
 
 //***********************
 // navigation size
