--- a/src/jade/inc/core/_base.jade
+++ b/src/jade/inc/core/_base.jade
@@ -6,6 +6,7 @@ html(xmlns:og="http://ogp.me/ns#", xmlns:fb='https://www.facebook.com/2008/fbml'
     block meta
       meta(name='description', content=description)
       meta(name='keywords', content=keywords)
+      mera(name='viewport', content='width=device-width, initial-scale=1.0')
     block link
       link(rel='icon', href='/favicon.png')
       link(rel='shortcut icon', href='/favicon.ico')
@@ -21,4 +22,3 @@ html(xmlns:og="http://ogp.me/ns#", xmlns:fb='https://www.facebook.com/2008/fbml'
       script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
       script(src="/dist/js/lib.min.js")
       script(src="/dist/js/script.min.js")
-      <script>hljs.initHighlightingOnLoad();</script>
