--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -13,13 +13,14 @@ block append meta
 block body
   .l-container
     include inc/layout/_layout-header
-      h1 Hello World!
+      h1 Sample page
     #main.l-main
       section
         h2 example of sprite images
         p.red-star
         p.blue-star
         p.yellow-star
+      section
         h2 magnific popup
         p here is demo.
         .modal
@@ -29,5 +30,46 @@ block body
               h2 demo
               p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris elementum turpis risus, quis commodo eros tincidunt at. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sapien nisi, placerat ut egestas vel, vestibulum nec eros. Sed nec venenatis lorem. Donec nulla lacus, molestie vehicula aliquet in, vulputate quis leo. Nullam ut libero vitae magna sollicitudin ornare. Suspendisse non elit congue, aliquam dui at, iaculis mi. Nullam mi dui, dictum a consequat sit amet, ornare ac nibh. Curabitur dui nisl, placerat vitae lobortis vitae, bibendum dapibus eros.
               a.modal__btn--dismiss(href='#') dismiss
+        section
+          h2 highlight.js
+          p This is <code>code</code> tag.
+          pre.js
+            code
+              | /***************************************************************************
+              | * Sass tasks
+              | ***************************************************************************/
+              | 
+              | gulp.task('rubySass', function () {
+              |   gulp.src(paths.scssFiles)
+              |     .pipe($.plumber())
+              |     .pipe($.rubySass({
+              |       r: 'sass-globbing',
+              |       'sourcemap=none': true
+              |     }))
+              |     .pipe($.filter('*.css'))
+              |     .pipe($.pleeease({
+              |       autoprefixer: {
+              |         browsers: ['last 2 versions']
+              |       },
+              |       sourcemaps: true
+              |     }))
+              |     .pipe($.filter('*.css').restore())
+              |     .pipe(gulp.dest(paths.cssDest))
+              |     .pipe(browserSync.reload({ stream: true }));
+              | });
+          pre.sass
+            code
+              | .block {
+              |   width: 100px;
+              |   height: auto;
+              |   margin: 0;
+              |   background: #ffffff;
+              |     &__element {
+              |         padding: 20px;
+              |     }
+              |     &--modifier {
+              |         background: $colorRed; 
+              |     }
+              |  }
     include inc/layout/_layout-footer
 block append scriptFooter
