--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,22 +1,16 @@
 @charset "utf-8";
-/* ======================================= */
-/* project name
-/* ======================================= */
+/* =============================================================================
+ *   project-starter
+/* =========================================================================== */
 
-// ========================================
 // core files
-// ========================================
 @import 'core/config';
+@import 'core/placeholder';
 @import 'core/mixins';
-@import 'core/normalize';
 @import 'core/default';
 
-// ========================================
-// modules
-// ========================================
+// module
 @import 'module/**/*.*';
 
-// ========================================
-// layouts
-// ========================================
+// layout
 @import 'layout/*.*';
