--- a/src/scss/module/_m-sprite.scss
+++ b/src/scss/module/_m-sprite.scss
@@ -20,8 +20,8 @@ $icon-star-red-width: 45px;
 $icon-star-red-height: 43px;
 $icon-star-red-total-width: 45px;
 $icon-star-red-total-height: 169px;
-$icon-star-red-image: '/dist/img/sprite.png';
-$icon-star-red: (0px, 0px, 0px, 0px, 45px, 43px, 45px, 169px, '/dist/img/sprite.png', 'icon_star-red', );
+$icon-star-red-image: '/dist/images/sprite.png';
+$icon-star-red: (0px, 0px, 0px, 0px, 45px, 43px, 45px, 169px, '/dist/images/sprite.png', 'icon_star-red', );
 $icon-star-yellow-name: 'icon_star-yellow';
 $icon-star-yellow-x: 0px;
 $icon-star-yellow-y: 63px;
@@ -31,8 +31,8 @@ $icon-star-yellow-width: 45px;
 $icon-star-yellow-height: 43px;
 $icon-star-yellow-total-width: 45px;
 $icon-star-yellow-total-height: 169px;
-$icon-star-yellow-image: '/dist/img/sprite.png';
-$icon-star-yellow: (0px, 63px, 0px, -63px, 45px, 43px, 45px, 169px, '/dist/img/sprite.png', 'icon_star-yellow', );
+$icon-star-yellow-image: '/dist/images/sprite.png';
+$icon-star-yellow: (0px, 63px, 0px, -63px, 45px, 43px, 45px, 169px, '/dist/images/sprite.png', 'icon_star-yellow', );
 $icon-star-blue-name: 'icon_star_blue';
 $icon-star-blue-x: 0px;
 $icon-star-blue-y: 126px;
@@ -42,13 +42,13 @@ $icon-star-blue-width: 45px;
 $icon-star-blue-height: 43px;
 $icon-star-blue-total-width: 45px;
 $icon-star-blue-total-height: 169px;
-$icon-star-blue-image: '/dist/img/sprite.png';
-$icon-star-blue: (0px, 126px, 0px, -126px, 45px, 43px, 45px, 169px, '/dist/img/sprite.png', 'icon_star_blue', );
+$icon-star-blue-image: '/dist/images/sprite.png';
+$icon-star-blue: (0px, 126px, 0px, -126px, 45px, 43px, 45px, 169px, '/dist/images/sprite.png', 'icon_star_blue', );
 $spritesheet-width: 45px;
 $spritesheet-height: 169px;
-$spritesheet-image: '/dist/img/sprite.png';
+$spritesheet-image: '/dist/images/sprite.png';
 $spritesheet-sprites: ($icon-star-red, $icon-star-yellow, $icon-star-blue, );
-$spritesheet: (45px, 169px, '/dist/img/sprite.png', $spritesheet-sprites, );
+$spritesheet: (45px, 169px, '/dist/images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
