--- a/src/scss/core/_default.scss
+++ b/src/scss/core/_default.scss
@@ -1,10 +1,8 @@
 @charset "utf-8";
-
-/* ======================================= */
 /* default styles
-/* ======================================= */
+/* ---------------------------------------- */
 
-/* The root element */
+/* the root element */
 html {
   font-size: 14px;
 }
@@ -15,19 +13,16 @@ body {
   word-wrap: break-word;
   font-family: $fontFamily;
   font-weight: 300;
-  letter-spacing: $letterSpace;
-  line-height: $lineHeight;
 }
 
-/* Grouping content */
+/* grouping content */
 iframe {
   vertical-align: middle;
 }
 
-/* Text-level semantics */
+/* text-level semantics */
 a {
   color: $colorLink;
-  transition: color 0.2s ease;
   text-decoration: none;
   &:focus {
     outline: thin dotted;
@@ -55,28 +50,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $fontFamily;
   &,
   & > a {
-    color: $colorTitle;
+    color: $colorBase;
     &:hover {
       text-decoration: none;
     }
   }
-}
-pre {
-  .hljs {
-    padding: 20px;
-  }
-  border-radius: 5px;
-  &:last-child{
-    margin-bottom: 0;
-  }
-}
-code {
-  padding: 1px 5px;
-  background-color: #f4f4f4;
-  border-radius: 4px;
-  font-size: 0.9em;
-  font-family: $fontFamilyCode;
-  line-height: 1.5;
 }
 ::selection {
   background: transparent;
@@ -91,7 +69,7 @@ code {
   font-family: $fontFamilyEn;
 }
 
-/* List items */
+/* list items */
 ul {
   li {
     list-style-type: none;
@@ -114,10 +92,9 @@ dl {
   }
 }
 
-/* Embedded content */
+/* embedded content */
 img {
   line-height: 1.0;
-  vertical-align: bottom;
   border: 0;
 }
 svg:not(:root){
