--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: _
-Theme URI: https://github.com/featherplain/
+Theme Name:
+Theme URI:
 Author: featherplain
-Author URI: https://github.com/featherplain/
-Version: 1.0
+Author URI:
+Version:
 */
