--- a/src/scss/module/_m-buttons.scss
+++ b/src/scss/module/_m-buttons.scss
@@ -2,3 +2,11 @@
 
 /* buttons
 /* ---------------------------------------- */
+.iconTw {
+  width: 100px;
+  height: 100px;
+  &__icon {
+    width: 14px;
+    height: 12px;
+  }
+}
