delete unnessesary files

--- a/src/scss/module/_m-sprite.scss
+++ b/src/scss/module/_m-sprite.scss
@@ -11,43 +11,43 @@ $icon-home: x y offset_x offset_y width height total_width total_height image_pa
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet: width height image $spritesheet-sprites;
 */
-$icon-star-red-name: 'icon_star-red';
-$icon-star-red-x: 0px;
-$icon-star-red-y: 0px;
-$icon-star-red-offset-x: 0px;
-$icon-star-red-offset-y: 0px;
-$icon-star-red-width: 45px;
-$icon-star-red-height: 43px;
-$icon-star-red-total-width: 45px;
-$icon-star-red-total-height: 169px;
-$icon-star-red-image: '../images/sprite.png';
-$icon-star-red: (0px, 0px, 0px, 0px, 45px, 43px, 45px, 169px, '../images/sprite.png', 'icon_star-red', );
-$icon-star-yellow-name: 'icon_star-yellow';
-$icon-star-yellow-x: 0px;
-$icon-star-yellow-y: 63px;
-$icon-star-yellow-offset-x: 0px;
-$icon-star-yellow-offset-y: -63px;
-$icon-star-yellow-width: 45px;
-$icon-star-yellow-height: 43px;
-$icon-star-yellow-total-width: 45px;
-$icon-star-yellow-total-height: 169px;
-$icon-star-yellow-image: '../images/sprite.png';
-$icon-star-yellow: (0px, 63px, 0px, -63px, 45px, 43px, 45px, 169px, '../images/sprite.png', 'icon_star-yellow', );
-$icon-star-blue-name: 'icon_star_blue';
+$icon-star-blue-name: 'icon_starBlue';
 $icon-star-blue-x: 0px;
-$icon-star-blue-y: 126px;
+$icon-star-blue-y: 0px;
 $icon-star-blue-offset-x: 0px;
-$icon-star-blue-offset-y: -126px;
+$icon-star-blue-offset-y: 0px;
 $icon-star-blue-width: 45px;
 $icon-star-blue-height: 43px;
 $icon-star-blue-total-width: 45px;
 $icon-star-blue-total-height: 169px;
 $icon-star-blue-image: '../images/sprite.png';
-$icon-star-blue: (0px, 126px, 0px, -126px, 45px, 43px, 45px, 169px, '../images/sprite.png', 'icon_star_blue', );
+$icon-star-blue: (0px, 0px, 0px, 0px, 45px, 43px, 45px, 169px, '../images/sprite.png', 'icon_starBlue', );
+$icon-star-red-name: 'icon_starRed';
+$icon-star-red-x: 0px;
+$icon-star-red-y: 63px;
+$icon-star-red-offset-x: 0px;
+$icon-star-red-offset-y: -63px;
+$icon-star-red-width: 45px;
+$icon-star-red-height: 43px;
+$icon-star-red-total-width: 45px;
+$icon-star-red-total-height: 169px;
+$icon-star-red-image: '../images/sprite.png';
+$icon-star-red: (0px, 63px, 0px, -63px, 45px, 43px, 45px, 169px, '../images/sprite.png', 'icon_starRed', );
+$icon-star-yellow-name: 'icon_starYellow';
+$icon-star-yellow-x: 0px;
+$icon-star-yellow-y: 126px;
+$icon-star-yellow-offset-x: 0px;
+$icon-star-yellow-offset-y: -126px;
+$icon-star-yellow-width: 45px;
+$icon-star-yellow-height: 43px;
+$icon-star-yellow-total-width: 45px;
+$icon-star-yellow-total-height: 169px;
+$icon-star-yellow-image: '../images/sprite.png';
+$icon-star-yellow: (0px, 126px, 0px, -126px, 45px, 43px, 45px, 169px, '../images/sprite.png', 'icon_starYellow', );
 $spritesheet-width: 45px;
 $spritesheet-height: 169px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($icon-star-red, $icon-star-yellow, $icon-star-blue, );
+$spritesheet-sprites: ($icon-star-blue, $icon-star-red, $icon-star-yellow, );
 $spritesheet: (45px, 169px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
