--- a/src/scss/core/_config.scss
+++ b/src/scss/core/_config.scss
@@ -1,38 +1,39 @@
 @charset "utf-8";
 
-//***********************
-// color
-//***********************
+//----------------------------------------------------------------------------*/
+// Color
+//----------------------------------------------------------------------------*/
 // primary
 $colorBase          : #333333;
-$colorLink          : #999999;
+$colorSub           : #555555;
+$colorLink          : #24279f;
 $colorLinkHover     : lighten($colorLink, 15%);
 $colorSelection     : $colorLink;
 
-//***********************
-// path
-//***********************
+//----------------------------------------------------------------------------*/
+// Path
+//----------------------------------------------------------------------------*/
 $filePath           : "../images/";
 
-//***********************
-// font-family
-//***********************
+//----------------------------------------------------------------------------*/
+// Typography
+//----------------------------------------------------------------------------*/
 // primary
-$fontFamily         : "Helvetica Neue", "Helvetica", "游ゴシック体", "Yu Gothic,", YuGothic "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック","MS PGothic",Arial,Sans-Serif;
+$fontFamily         : "Helvetica Neue", "Helvetica", "游ゴシック体", "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック","MS PGothic",Arial,Sans-Serif;
 // En
 $fontFamilyEn       : "Helvetica Neue", "Helvetica",Sans-Serif;
 // code
 $fontFamilyCode     : Menlo,Consolas,Courier,sans-serif;
 
-//***********************
-// block size
-//***********************
+//----------------------------------------------------------------------------*/
+// Block size
+//----------------------------------------------------------------------------*/
 // $containerWidth: ;
-$maxWidth           : 100%;
+$maxWidth           : 1280px;
 
-//***********************
-// navigation size
-//***********************
+//----------------------------------------------------------------------------*/
+// Navigation size
+//----------------------------------------------------------------------------*/
 // $menuHeight        : ;
 // $menuItemWidth     : ;
 // $menuItemHeight    : ;
