--- a/src/scss/core/_placeholder.scss
+++ b/src/scss/core/_placeholder.scss
@@ -1,11 +1,12 @@
 @charset "utf-8";
 
-//***********************
+//----------------------------------------------------------------------------*/
 // extends
-//***********************
+//----------------------------------------------------------------------------*/
 /* columns */
 %baseWidth {
   width: $maxWidth;
+  max-width: 100%;
   margin: 0 auto;
 }
 
