--- a/src/scss/core/_placeholder.scss
+++ b/src/scss/core/_placeholder.scss
@@ -1,16 +1,16 @@
 @charset "utf-8";
 
-//----------------------------------------------------------------------------*/
+//----------------------------------------------------------------------------
 // extends
-//----------------------------------------------------------------------------*/
-/* columns */
+//----------------------------------------------------------------------------
+// columns
 %baseWidth {
   width: $maxWidth;
   max-width: 100%;
   margin: 0 auto;
 }
 
-/* Table */
+// Table
 %table{
   display: table;
   vertical-align: middle;
@@ -23,7 +23,7 @@
     }
   }
 }
-/* clearfix */
+// clearfix
 %clearfix{
   &:after {
     display: block;
