--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,4 +1,6 @@
 @charset "utf-8";
 
+/* -------------------------------------------------------------- */
 /* header
-/* ---------------------------------------- */
+/* -------------------------------------------------------------- */
+.l-header {}
