set WordPress specific styles

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,6 +5,7 @@
 
 // core files
 @import 'core/config';
+@import 'core/functions';
 @import 'core/placeholder';
 @import 'core/mixins';
 @import 'core/sprite';
