--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,12 +21,12 @@
 
 // module
 // ----------------------------------------------------------------------------
-@import 'module/*.*';
+@import 'modules/*.*';
 
 // layout
 // ----------------------------------------------------------------------------
-@import 'layout/*.*';
+@import 'layouts/*.*';
 
-// WordPress
+// styles
 // ----------------------------------------------------------------------------
-// @import 'wp/*.*';
+@import 'styles/*.*';
