--- a/src/scss/core/_fonts.scss
+++ b/src/scss/core/_fonts.scss
@@ -10,12 +10,12 @@
 @font-face {
   $path: '//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/fonts/fontawesome-webfont';
   font-family: 'FontAwesome';
-  src: url('#{$path}/fontawesome-webfont.eot?v=#{$fa-version}');
-  src: url('#{$path}/fontawesome-webfont.eot?#iefix&v=#{$fa-version}') format('embedded-opentype'),
-    url('#{$path}/fontawesome-webfont.woff2?v=#{$fa-version}') format('woff2'),
-    url('#{$path}/fontawesome-webfont.woff?v=#{$fa-version}') format('woff'),
-    url('#{$path}/fontawesome-webfont.ttf?v=#{$fa-version}') format('truetype'),
-    url('#{$path}/fontawesome-webfont.svg?v=#{$fa-version}#fontawesomeregular') format('svg');
+  src: url('#{$path}/fontawesome-webfont.eot');
+  src: url('#{$path}/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+    url('#{$path}/fontawesome-webfont.woff2') format('woff2'),
+    url('#{$path}/fontawesome-webfont.woff') format('woff'),
+    url('#{$path}/fontawesome-webfont.ttf') format('truetype'),
+    url('#{$path}/fontawesome-webfont.svg#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
