--- a/src/jade/inc/core/_base.jade
+++ b/src/jade/inc/core/_base.jade
@@ -11,14 +11,10 @@ html(xmlns:og="http://ogp.me/ns#", xmlns:fb='https://www.facebook.com/2008/fbml'
       link(rel='icon', href='/favicon.png')
       link(rel='shortcut icon', href='/favicon.ico')
       link(rel='apple-touch-icon', href='/apple-touch-icon.png')
-      link(rel='stylesheet', href='css/app.css')
+      link(rel='stylesheet', href='/assets/css/app.css')
     block script
-      //- != '\n<!--[if lt IE 9]>'
-      //- script(src="dist/js/app/html5shiv-printshiv.js")
-      //- != '\n<![endif]-->'
   body(class=bodyClass)
     block body
     block scriptFooter
       script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
-      script(src="js/lib.min.js")
-      script(src="js/script.min.js")
+      script(src="/assets/js/script.min.js")
