bugfix watch && bs task of bundle:js

--- a/src/jade/inc/core/_base.jade
+++ b/src/jade/inc/core/_base.jade
@@ -16,5 +16,4 @@ html(xmlns:og="http://ogp.me/ns#", xmlns:fb='https://www.facebook.com/2008/fbml'
   body(class=bodyClass)
     block body
     block scriptFooter
-      script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
-      script(src="/assets/js/script.min.js")
+      script(src="/assets/js/bundle.js")
