bugfix sass task doesn't work

--- a/src/scss/layouts/_layout.scss
+++ b/src/scss/layouts/_layout.scss
@@ -4,6 +4,9 @@
 /* layout
 /* -------------------------------------------------------------- */
 .l-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .l-header {
 }
